# grpc_rust

./: Cargo.toml  README.md
proto/: user.proto
src/: main.rs  mongo_connection.rs  service.rs
